k8s/drawio-middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: drawio-strip-prefix
spec:
  stripPrefix:
    prefixes:
      - /drawio
