k8s/middleware-limits.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: limit-body-size
  namespace: licium
spec:
  buffering:
    maxRequestBodyBytes: 104857600
