k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: licium
  labels:
    app.kubernetes.io/name: licium
    app.kubernetes.io/part-of: licium
