k8s/backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: licium
  annotations:
    traefik.ingress.kubernetes.io/service.serverstransport: licium-transport-timeout@kubernetescrd
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 3001
      targetPort: 3001
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: licium
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: natorus87/licium-server:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3001
      imagePullSecrets:
        - name: regcred
